src/test/ui/rfc-2632-const-trait-impl/without-tilde.stderr
error: expected one of `!`, `(`, `,`, `=`, `>`, `?`, `for`, `~`, lifetime, or path, found keyword `const`
  --> $DIR/without-tilde.rs:5:13
   |
LL | struct S<T: const Tr>;
   |             ^^^^^ expected one of 10 possible tokens

error: aborting due to previous error

